# kRPC_docs_MCP

./: .PROJECT_IMPLEMENTATION_PLAN.md.swp  .SCRIBE_Master_Prompt_KSP_MCP.md.swp  .gitignore  AGENTS.md  LICENSE  PROJECT_IMPLEMENTATION_PLAN.md  README.md  SCRIBE_Master_Prompt_KSP_MCP.md  handoff.md  knowledge_tools.md  pyproject.toml
.github/workflows/: ci.yml
data/: krpc_python_docs.jsonl  manifest.json
krpc-snippets/: .env.example  .k_rpc_mcp_rag_snippet_indexer_project_plan.md.swp  README.md  k_rpc_mcp_rag_snippet_indexer_project_plan.md  mkdocs.yml
krpc-snippets/artifacts/: README.md
krpc-snippets/ci/: README.md
krpc-snippets/data/: README.md  bundle_navhelper.py  bundle_visviva.py  embeddings.jsonl  eval_hybrid.json  eval_keyword.json  keyword_index.json  license_audit.json  snippets.jsonl  (+24 more)
krpc_code_examples_rag/: MOVED.md
krpc_index/: __init__.py  index.py
mcp_server/: __init__.py  blueprint_cache.py  blueprint_export.py  executor_tools.py  ksp_wiki_client.py  main.py  prompts.py  resources.py  server.py  snippets_tools.py  tools.py  wiki_tools.py
scripts/: .level_flight.py.swp  filter_python_only.py  krpc_blueprint_cli.py  krpc_connect_test.py  krpc_easy_tools_test.py  krpc_execute_script_cli.py  krpc_medium1_tools_test.py  krpc_medium2_tools_test.py  krpc_medium3_tools_test.py  krpc_navigation_test.py  krpc_overview_test.py  krpc_power_status_test.py  krpc_stage_plan_test.py  krpc_staging_info_test.py  krpc_targeting_tools_test.py  ksp_wiki_cli.py  launch_to_orbit.py  level_flight.py  pid_hover.py  scrape_krpc_docs.py  search_krpc_index.py
(+89 files in other folders)
